tests/fixtures/fail/copy_generic_blanket_unproven.sc
let Cell(T: type) = struct(value: T)

extend(T: type) Cell(T): Copy {}

let main(): i32 = { 42 }
